stoat/tests/snapshots/snapshots/snapshots__blame____dismiss_blame.snap
---
source: stoat/tests/snapshots/blame.rs
assertion_line: 62
expression: app.snapshot_active()
---
[editor] pane=0 mode=normal
  1:|line one by alice
  2:line two modified by bob
  3:line three modified by bob
  4:line four by alice
  5:line five by alice
  6:line six by alice
  7:line seven by alice
  8:line eight by alice
