stoat/tests/snapshots/snapshots/snapshots__blame____git_mode_status.snap
---
source: stoat/tests/snapshots/blame.rs
assertion_line: 71
expression: app.snapshot_active()
---
[editor] pane=0 mode=git_status ctx=Git
filter=All files=1/1
>  M file.txt
